Bug 58848; change ddeexec registry entry so Windows won't use DDE to talk to Mozilla; r=ssu/sr=blaker/a=asa